--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap");
+
 body {
   background-color: wheat;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  line-height: 1;
   height: 100vh;
-  font-size: 1rem;
   padding: 0;
   margin: 0;
   color: rgb(97, 82, 54);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "TikTok Sans", sans-serif;
   text-align: center;
   font-variant-numeric: tabular-nums;
 }
@@ -20,18 +21,22 @@ h1 {
 }
 
 h2,
-h3 {
+h3,
+p {
   margin-bottom: 0;
+}
+
+p {
+  font-size: 18px;
 }
 
 .rps-btns > button {
   background-color: rgba(0, 0, 0, 0);
-  font-size: 4rem;
+  font-size: 3rem;
   width: 100px;
   height: 100px;
   border-radius: 999px;
   border: 0;
-  margin-inline: 1rem;
   text-shadow: 0px 0px 70px sienna, 0px 0px 20px rgb(113, 96, 63);
 }
 
@@ -49,7 +54,7 @@ h3 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(1, 1fr);
-  gap: 8rem;
+  gap: 5rem;
 }
 
 .round,
@@ -72,6 +77,6 @@ h3 {
 
 .com-scores,
 .hmn-scores {
-  font-size: 6rem;
-  margin: 0 0 1.5rem 0;
+  font-size: 4rem;
+  margin: 0 0 1rem 0;
 }
